--- a/about.html
+++ b/about.html
@@ -4,23 +4,29 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="style.css">
-    <title>Moringa Cafetiria</title>
+    <link rel="stylesheet" href="main.css">
+    <title>Moringa Cafeteria</title>
 </head>
 <body>
-    <div class="navbar">
-        <ul class="navs">
-            <li><a href="try.html">Home</a></li>
-            <li><a href="about.html">About</a></li>
-            <li><a href="menu.html">Menu</a></li>
-            <li><a href="contact.html">Contact</a></li>
-        </ul>
-        </div>
-        <div class="about">
-            <h2>About us</h2>
-            <p>We are a Moringa owned Cafeteria that serves delicious meals to students. Lorem ipsum dolor sit amet consectetur, adipisicing elit. Corrupti, fuga. Sed repellendus incidunt consequatur nisi provident quibusdam enim, iste aliquam ut dignissimos nemo possimus dolores suscipit magni quos dicta aut accusamus, nihil est necessitatibus facere eaque sapiente optio. Velit, magni maiores! Asperiores obcaecati voluptatum sint omnis fuga necessitatibus molestiae, vero ducimus. Recusandae ut cupiditate, mollitia ipsum deserunt sint vitae obcaecati animi iure? Ipsam unde hic optio sint. Rem modi porro deleniti, itaque eaque, a non veniam quas odit tempore accusantium dolor repellendus? Ullam non minima cum ab laborum accusamus, voluptates quae mollitia harum porro aperiam id tenetur recusandae aut consequuntur maiores impedit, facilis voluptas vitae. Minima numquam aliquam vitae, blanditiis aut, tempora ipsam voluptates excepturi incidunt sapiente dolorem quisquam quam, odit sint esse aperiam dolores dolor! Unde, temporibus doloribus voluptatem nam, illo dolor quas eius atque id laudantium repudiandae, optio possimus ut. Voluptate similique fuga illo, possimus autem, mollitia natus suscipit commodi a architecto libero sunt saepe ut ab sint ad corrupti dolor laboriosam doloremque cupiditate non alias! Odio, voluptatum rerum. Consequuntur est rerum itaque quisquam alias quam! Nulla, ad, id nisi odit maiores tempora deserunt eligendi eius reprehenderit iusto facilis. Optio veritatis debitis itaque repellendus est quasi ex! Dolores!</p>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur consectetur fugit, nisi ducimus, totam veniam harum optio dignissimos officiis et quisquam sunt aliquid, modi beatae? Beatae aspernatur fugit esse numquam corrupti quidem aperiam vel! Voluptatem numquam architecto est qui autem harum reiciendis nihil natus, eveniet hic molestiae, quos, necessitatibus repellat labore nam neque amet! Harum itaque possimus corrupti. Voluptatibus eveniet dolore voluptatum explicabo eius quasi veritatis placeat quaerat odio animi excepturi, incidunt accusamus quas nobis ab reiciendis repellendus cupiditate perferendis aut libero ipsum ratione minima. Ipsa nisi pariatur obcaecati magni, fugit, perferendis mollitia laboriosam consequuntur recusandae et dolorum. Architecto, beatae? Iure repudiandae delectus voluptates minima deserunt exercitationem excepturi. In ea, quidem doloremque est dignissimos consequatur hic aliquam maxime quae et suscipit placeat eveniet sint optio molestias aliquid, ratione assumenda fugit cupiditate sequi sunt. Illo, odit ab hic voluptates corporis necessitatibus quis dolorem reprehenderit iure amet, aperiam voluptatum doloribus maiores exercitationem?</p>
-        </div>
+
+    <div class="back-btn">
+        <a href="index.html" class="btn btn--small"><i class="fas fa-arrow-circle-left" aria-hidden="true"></i> Go back</a>
+    </div>
+    <div class="about">
+        <h2 class="heading">About us</h2>
+        <p class="about-info">We are a Moringa owned Cafeteria that serves delicious meals to students. Lorem ipsum dolor sit amet consectetur, 
+            adipisicing elit. Corrupti, fuga. Sed repellendus incidunt consequatur nisi provident quibusdam enim, iste aliquam ut dignissimos
+            nemo possimus dolores suscipit magni quos dicta aut accusamus, nihil est necessitatibus facere eaque sapiente optio. Velit, magni 
+            maiores! Asperiores obcaecati voluptatum sint omnis fuga necessitatibus molestiae, vero ducimus. Recusandae ut cupiditate, mollitia
+            ipsum deserunt sint vitae obcaecati animi iure? Ipsam unde hic optio sint. Rem modi porro deleniti, itaque eaque, a non veniam quas odit tempore accusantium dolor repellendus? Ullam non minima cum ab laborum accusamus, voluptates quae mollitia harum porro aperiam id tenetur recusandae aut consequuntur maiores impedit, facilis voluptas vitae. Minima numquam aliquam vitae, blanditiis aut, tempora ipsam voluptates excepturi incidunt sapiente dolorem quisquam quam, odit sint esse aperiam dolores dolor! Unde, temporibus doloribus voluptatem nam, illo dolor quas eius atque id laudantium repudiandae, optio possimus ut. Voluptate similique fuga illo, possimus autem, mollitia natus suscipit commodi a architecto libero sunt saepe ut ab sint ad corrupti dolor laboriosam doloremque cupiditate non alias! Odio, voluptatum rerum. Consequuntur est rerum itaque quisquam alias quam! Nulla, ad, id nisi odit maiores tempora deserunt eligendi eius reprehenderit iusto facilis. Optio veritatis debitis itaque repellendus est quasi ex! Dolores!
+        </p>
+        <p class="about-info">Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur consectetur fugit, nisi ducimus, totam veniam
+             harum optio dignissimos officiis et quisquam sunt aliquid, modi beatae? Beatae aspernatur fugit esse numquam corrupti quidem aperiam 
+             vel! Voluptatem numquam architecto est qui autem harum reiciendis nihil natus, eveniet hic molestiae, quos, necessitatibus repellat labore nam neque amet! Harum itaque possimus corrupti. Voluptatibus eveniet dolore voluptatum explicabo eius quasi veritatis placeat quaerat odio animi excepturi, incidunt accusamus quas nobis ab reiciendis repellendus cupiditate perferendis aut libero ipsum ratione minima. Ipsa nisi pariatur obcaecati magni, fugit, perferendis mollitia laboriosam consequuntur recusandae et dolorum. Architecto, beatae? Iure repudiandae delectus voluptates minima deserunt exercitationem excepturi. In ea, quidem doloremque est dignissimos consequatur hic aliquam maxime quae et suscipit placeat eveniet sint optio molestias aliquid, ratione assumenda fugit cupiditate sequi sunt. Illo, odit ab hic voluptates corporis necessitatibus quis dolorem reprehenderit iure amet, aperiam voluptatum doloribus maiores exercitationem?
+        </p>
+    </div>
 
         <footer>
             <p> &copy; 2023 copyright Moringa Cafeteria. All rights reserved</p>
